--- a/Frontend Mentor/Calculator App/style.css
+++ b/Frontend Mentor/Calculator App/style.css
@@ -80,6 +80,8 @@ body.theme-1 .equals {
 body.theme-1 .operator.selected {
   background-color: #fff;
   color: #3a4764;
+  -webkit-transition: background-color 2000ms ease-out;
+  transition: background-color 2000ms ease-out;
 }
 
 body.theme-1 .attribution a {
@@ -383,6 +385,9 @@ main {
     left: 50%;
     -webkit-transform: translateX(-50%);
             transform: translateX(-50%);
+  }
+  #display-box {
+    font-size: 3em;
   }
   #keypad {
     height: auto;
