Add cursor on button hover

--- a/Frontend Mentor/Calculator App/style.scss
+++ b/Frontend Mentor/Calculator App/style.scss
@@ -329,6 +329,7 @@ main {
         border: none;
         border-radius: 5px;
         padding: .7em 0 .6em 0;
+        cursor: pointer;
     }
 
     .reset {
