--- a/Frontend Mentor/Results Summary/style.css
+++ b/Frontend Mentor/Results Summary/style.css
@@ -1,3 +1,8 @@
+@font-face {
+  font-family: Hanken Grotesque;
+  src: url(./fonts/HankenGrotesk-VariableFont_wght.ttf);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -10,16 +15,26 @@ html, body {
   width: 100%;
 }
 
+body {
+  font-family: Hanken Grotesque;
+  font-variation-settings: "wght" 700;
+}
+
 #card-container {
   background-color: #fff;
   position: relative;
+}
+
+.card-heading {
+  font-size: 1.2em;
+  margin-bottom: 1.3em;
 }
 
 #overall-result {
   background: -webkit-gradient(linear, left top, left bottom, from(#6743ff), to(#2d2af7));
   background: linear-gradient(#6743ff, #2d2af7);
   border-radius: 0 0 2em 2em;
-  padding: 2em;
+  padding: 2em 2em 3em 2em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -33,13 +48,18 @@ html, body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  color: #fff;
+}
+
+#overall-result .card-heading {
+  opacity: 60%;
 }
 
 .total-score {
   background: -webkit-gradient(linear, left top, left bottom, from(#4f24cb), to(#3c42f1));
   background: linear-gradient(#4f24cb, #3c42f1);
   border-radius: 100%;
-  padding: 25%;
+  padding: 7% 12%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -53,6 +73,30 @@ html, body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  margin-bottom: 1.8em;
+}
+
+#overall-score-num {
+  font-size: 4em;
+}
+
+#total {
+  opacity: 40%;
+}
+
+.score-desc {
+  font-size: 1.5em;
+  text-align: center;
+  margin-bottom: .5em;
+  font-variation-settings: "wght" 600;
+}
+
+.percentile-msg {
+  width: 85%;
+  opacity: 60%;
+  text-align: center;
+  font-variation-settings: "wght" 500;
+  font-size: 1em;
 }
 
 .attribution {
