--- a/Frontend Mentor/Results Summary/style.scss
+++ b/Frontend Mentor/Results Summary/style.scss
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: Hanken Grotesque;
+    src: url(./fonts/HankenGrotesk-VariableFont_wght.ttf);
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -9,34 +14,73 @@ html, body {
     width: 100%;
 }
 
+body {
+    font-family: Hanken Grotesque;
+    font-variation-settings: "wght" 700;
+}
 
 
 #card-container {
     background-color: #fff;
     position: relative;
-    
-    
+}
+
+.card-heading {
+    font-size: 1.2em;
+    margin-bottom: 1.3em;
 }
 
 #overall-result {
     background: linear-gradient(#6743ff, #2d2af7);
     border-radius: 0 0 2em 2em;
-    padding: 2em;
+    padding: 2em 2em 3em 2em;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-    align-items: center
+    align-items: center;
+    color: #fff;
+
+    .card-heading {
+        opacity: 60%;
+    }
 }
 
 .total-score {
     background: linear-gradient(#4f24cb, #3c42f1);
     border-radius: 100%;
-    padding: 25%;
+    padding: 7% 12%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin-bottom: 1.8em;
 }
+
+#overall-score-num {
+    font-size: 4em;
+}
+
+#total {
+    opacity: 40%;
+}
+
+.score-desc {
+    font-size: 1.5em;
+    text-align: center;
+    margin-bottom: .5em;
+    font-variation-settings: "wght" 600;
+}
+
+.percentile-msg {
+    width: 85%;
+    opacity: 60%;
+    text-align: center;
+    font-variation-settings: "wght" 500;
+    font-size: 1em;
+}
+
+
+
 
 .attribution { 
     font-size: 11px; text-align: center; 
