--- a/Frontend Mentor/Results Summary/style.css
+++ b/Frontend Mentor/Results Summary/style.css
@@ -31,8 +31,8 @@ body {
 }
 
 #overall-result {
-  background: -webkit-gradient(linear, left top, left bottom, from(#6743ff), to(#2d2af7));
-  background: linear-gradient(#6743ff, #2d2af7);
+  background: -webkit-gradient(linear, left top, left bottom, from(#7857ff), to(#2e2be9));
+  background: linear-gradient(#7857ff, #2e2be9);
   border-radius: 0 0 2em 2em;
   padding: 2em 2em 3em 2em;
   display: -webkit-box;
@@ -56,8 +56,8 @@ body {
 }
 
 .total-score {
-  background: -webkit-gradient(linear, left top, left bottom, from(#4f24cb), to(#3c42f1));
-  background: linear-gradient(#4f24cb, #3c42f1);
+  background: -webkit-gradient(linear, left top, left bottom, from(#4e21ca), to(rgba(36, 33, 202, 0)));
+  background: linear-gradient(#4e21ca, rgba(36, 33, 202, 0));
   border-radius: 100%;
   padding: 7% 12%;
   display: -webkit-box;
@@ -77,7 +77,7 @@ body {
 }
 
 #overall-score-num {
-  font-size: 4em;
+  font-size: 3.5em;
 }
 
 #total {
@@ -99,13 +99,88 @@ body {
   font-size: 1em;
 }
 
+#summary {
+  padding: 8%;
+}
+
+#summary .card-heading {
+  color: #303b5a;
+}
+
+.score-category {
+  width: 100%;
+  margin-bottom: 1.2em;
+  border-radius: .6em;
+  padding: 1em 1.2em;
+}
+
+.score-category img {
+  vertical-align: bottom;
+}
+
+.score-category.category-1 {
+  background-color: rgba(255, 87, 87, 0.08);
+  color: #ff5757;
+}
+
+.score-category.category-2 {
+  background-color: rgba(255, 176, 31, 0.08);
+  color: #ffb01f;
+}
+
+.score-category.category-3 {
+  background-color: rgba(0, 189, 145, 0.08);
+  color: #00bd91;
+}
+
+.score-category.category-4 {
+  background-color: rgba(17, 37, 212, 0.08);
+  color: #1125d4;
+}
+
+.category-name {
+  display: inline-block;
+}
+
+.score {
+  position: relative;
+  float: right;
+}
+
+.score .numerator {
+  display: inline-block;
+  margin-right: 2px;
+  color: #303b5a;
+}
+
+.score .denominator {
+  display: inline-block;
+  color: rgba(48, 59, 90, 0.4);
+}
+
+button {
+  width: 100%;
+  background-color: #303b5a;
+  padding: .85em 0;
+  margin-top: .7em;
+  border: none;
+  border-radius: 3em;
+  color: #fff;
+  font-family: inherit;
+  font-size: 1.1em;
+  font-variation-settings: "wght" 600;
+}
+
 .attribution {
-  font-size: 11px;
+  font-size: .5em;
   text-align: center;
+  padding-bottom: 10px;
+  color: rgba(48, 59, 90, 0.8);
 }
 
 .attribution a {
   color: #3e52a3;
+  text-decoration: none;
 }
 
 @media screen and (min-width: 1201px) {
