Implement JS to get category names, scores, and icons from JSON

--- a/Frontend Mentor/Results Summary/style.css
+++ b/Frontend Mentor/Results Summary/style.css
@@ -114,8 +114,9 @@ body {
   padding: 1em 1.2em;
 }
 
-.score-category img {
+.score-category .icon {
   vertical-align: bottom;
+  margin-right: 6px;
 }
 
 .score-category.category-1 {
