--- a/Frontend Mentor/Results Summary/style.scss
+++ b/Frontend Mentor/Results Summary/style.scss
@@ -33,11 +33,12 @@ body {
 #overall-result {
     background: linear-gradient(hsl(252, 100%, 67%), hsl(241, 81%, 54%));
     border-radius: 0 0 2em 2em;
-    padding: 2em 2em 3em 2em;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
+    padding: 2em 3em;
+    //display: flex;
+    //flex-direction: column;
+    //justify-content: space-between;
+    //align-items: center;
+    text-align: center;
     color: #fff;
 
     .card-heading {
@@ -49,10 +50,10 @@ body {
     background: linear-gradient(hsla(256, 72%, 46%, 1), hsla(241, 72%, 46%, 0));
     border-radius: 100%;
     padding: 7% 12%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+    display: inline-block;
+    //flex-direction: column;
+    //justify-content: center;
+   // align-items: center;
     margin-bottom: 1.8em;
 }
 
@@ -72,7 +73,7 @@ body {
 }
 
 .percentile-msg {
-    width: 85%;
+    width: 100%;
     opacity: 60%;
     text-align: center;
     font-variation-settings: "wght" 500;
@@ -82,6 +83,7 @@ body {
 
 #summary {
     padding: 8%;
+    background-color: #fff;
 
     .card-heading {
         color: hsl(224, 30%, 27%);
@@ -175,24 +177,66 @@ button {
 }
 
 
-// Desktop and large tablet styles
-@media screen and (min-width: 1201px){
+// Desktop and tablet styles
+@media screen and (min-width: 720px){
 
     #card-container, #overall-result, #summary {
         border-radius: 2em;
     }
 
     #card-container {
+        background: #fff;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        //border: solid #000 10px;
         display: grid;
         grid-template-columns: 1fr 1fr;
-        width: 40%;
-        height: 50%;
+        width: 650px;
+        height: 468px;
         box-shadow: 20px 10px 40px rgba(20, 42, 88, .1);
     }
+
+
+    #overall-result, #summary {
+        height: 100%;
+        
+    }
+
+    #overall-result {
+        padding: 35px 45px;;
+    }
+
+    #summary {
+        padding: 35px 30px;
+    }
+
+    .total-score {
+        margin-bottom: 2em;
+    }
+
+    .score-desc {
+        font-size: 1.8em;
+    }
+
+ 
+
+    .card-heading {
+        font-size: 1.3em;
+    }    
+
+    .total-score {
+        padding: 14% 20%;
+    }
+
+    #overall-score-num {
+        font-size: 4em;
+    }
+
+    .score-category {
+        padding: .8em 1.2em;
+    }
+
+
     
 }
  
