--- a/Frontend Mentor/Interactive Rating Component/style.css
+++ b/Frontend Mentor/Interactive Rating Component/style.css
@@ -39,11 +39,9 @@ body {
 }
 
 #rating-state {
+  display: none;
   height: 100%;
   text-align: left;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -105,12 +103,36 @@ body {
 }
 
 #thankyou-state {
-  display: none;
+  height: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
   text-align: center;
 }
 
-.active {
-  display: block;
+#thankyou-state .thankyou-illustration {
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+.selection-text {
+  font-size: 1em;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+  padding: .4em .8em .2em .8em;
+  border-radius: 3em;
+  color: #fb7413;
+  opacity: .7;
+  background-color: rgba(124, 135, 152, 0.2);
 }
 
 .attribution {
