--- a/Frontend Mentor/Intro Component/style.css
+++ b/Frontend Mentor/Intro Component/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -5,11 +6,156 @@
           box-sizing: border-box;
 }
 
-.attribution {
-  font-size: 11px;
+body {
+  position: relative;
+  width: 100%;
+  background: url(./img/bg-intro-mobile.png) #ff7a7a;
+  font-family: 'Poppins', sans-serif;
   text-align: center;
+  padding: 5.8em 1.8em 3em 1.8em;
+  color: #fff;
+}
+
+/*#hero {
+    //color: #fff;
+    //padding: 5.8em 1.8em 3em 1.8em;
+}*/
+h1 {
+  font-weight: 600;
+  font-size: 1.8em;
+  line-height: 1.3em;
+  margin-bottom: .8em;
+}
+
+.blurb {
+  font-weight: 500;
+  font-size: 1em;
+  margin-bottom: 3em;
+}
+
+.cta {
+  width: 100%;
+  background-color: #6055a5;
+  border-radius: .7em;
+  padding: 1.2em 3em;
+  -webkit-box-shadow: 0 8px 0 rgba(0, 0, 0, 0.15);
+          box-shadow: 0 8px 0 rgba(0, 0, 0, 0.15);
+  margin-bottom: 2em;
+}
+
+.cta span {
+  font-weight: 700;
+}
+
+#signup {
+  width: 100%;
+  background-color: #fff;
+  padding: 1.2em;
+  border-radius: .7em;
+  -webkit-box-shadow: 0 8px 0 rgba(0, 0, 0, 0.15);
+          box-shadow: 0 8px 0 rgba(0, 0, 0, 0.15);
+  margin-bottom: 2em;
+}
+
+#signup .input-field {
+  width: 100%;
+  border: solid 1px rgba(185, 182, 211, 0.5);
+  color: #3e3c49;
+  border-radius: .4em;
+  padding: 1.4em;
+  margin-bottom: 1.2em;
+}
+
+#signup .input-field::-webkit-input-placeholder {
+  position: relative;
+  color: rgba(62, 60, 73, 0.7);
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  font-size: 1.1em;
+  top: 1px;
+}
+
+#signup .input-field:-ms-input-placeholder {
+  position: relative;
+  color: rgba(62, 60, 73, 0.7);
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  font-size: 1.1em;
+  top: 1px;
+}
+
+#signup .input-field::-ms-input-placeholder {
+  position: relative;
+  color: rgba(62, 60, 73, 0.7);
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  font-size: 1.1em;
+  top: 1px;
+}
+
+#signup .input-field::placeholder {
+  position: relative;
+  color: rgba(62, 60, 73, 0.7);
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+  font-size: 1.1em;
+  top: 1px;
+}
+
+#signup label {
+  border-width: 0 !important;
+  clip: rect(1px, 1px, 1px, 1px) !important;
+  height: 1px !important;
+  overflow: hidden !important;
+  padding: 0 !important;
+  position: absolute !important;
+  white-space: nowrap !important;
+  width: 1px !important;
+}
+
+#signup input[type="submit"] {
+  width: 100%;
+  background-color: #38cc8c;
+  -webkit-box-shadow: 0 4px 0 #2abb7c;
+          box-shadow: 0 4px 0 #2abb7c;
+  border: none;
+  border-radius: .4em;
+  padding: 1.2em 0;
+  color: #fff;
+  text-transform: uppercase;
+  font-size: .9em;
+  font-weight: 600;
+  margin-bottom: 1.2em;
+}
+
+#signup .TS-agreement {
+  color: #b9b6d3;
+  font-size: .7em;
+  font-weight: 500;
+}
+
+#signup .TS-agreement a {
+  text-decoration: none;
+  color: #ff7a7a;
+  font-weight: 700;
+}
+
+.attribution {
+  position: absolute;
+  width: 100%;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  text-align: center;
+  opacity: 60%;
+  padding-bottom: 10px;
+  font-size: 10px;
+  text-align: center;
+  font-weight: 600;
 }
 
 .attribution a {
   color: #3e52a3;
+  text-decoration: none;
 }
