--- a/Frontend Mentor/Intro Component/style.scss
+++ b/Frontend Mentor/Intro Component/style.scss
@@ -1,14 +1,135 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
 }
 
+body {
+    position: relative;
+    width: 100%;
+    background: url(./img/bg-intro-mobile.png) hsl(0, 100%, 74%);
+    font-family: 'Poppins', sans-serif;
+    text-align: center;
+    padding: 5.8em 1.8em 3em 1.8em;
+    color: #fff;
+}
+
+/*#hero {
+    //color: #fff;
+    //padding: 5.8em 1.8em 3em 1.8em;
+}*/
+
+h1 {
+    font-weight: 600;
+    font-size: 1.8em;
+    line-height: 1.3em;
+    margin-bottom: .8em;
+}
+
+.blurb {
+    font-weight: 500;
+    font-size: 1em;
+    margin-bottom: 3em;
+}
+
+.cta {
+    width: 100%;
+    background-color: hsl(248, 32%, 49%);
+    border-radius: .7em;
+    padding: 1.2em 3em;
+    box-shadow: 0 8px 0 rgba(0, 0, 0, .15);
+    margin-bottom: 2em;
+
+    span {
+        font-weight: 700;
+    }
+}
+
+#signup {
+    width: 100%;
+    background-color: #fff;
+    padding: 1.2em;
+    border-radius: .7em;
+    box-shadow: 0 8px 0 rgba(0, 0, 0, .15);
+    margin-bottom: 2em;
+
+    .input-field {
+        width: 100%;
+        border: solid 1px hsla(246, 25%, 77%, .5);
+        color: hsl(249, 10%, 26%);
+        border-radius: .4em;
+        padding: 1.4em; 
+        margin-bottom: 1.2em;
+
+        &::placeholder {
+            position: relative;
+            color: hsla(249, 10%, 26%, .7);
+            font-family: 'Poppins', sans-serif;
+            font-weight: 600;
+            font-size: 1.1em;
+            top: 1px;
+        }
+
+        
+    }
+
+    label {
+        border-width: 0 !important;
+        clip: rect(1px, 1px, 1px, 1px) !important;
+        height: 1px !important;
+        overflow: hidden !important;
+        padding: 0 !important;
+        position: absolute !important;
+        white-space: nowrap !important;
+        width: 1px !important;
+    }
+
+    input[type="submit"]{
+        width: 100%;
+        background-color: hsl(154, 59%, 51%);
+        box-shadow: 0 4px 0 hsl(154, 63%, 45%);
+        border: none;
+        border-radius: .4em;
+        padding: 1.2em 0;
+        color: #fff;
+        text-transform: uppercase;
+        font-size: .9em;
+        font-weight: 600;
+        margin-bottom: 1.2em;
+    }
+
+    .TS-agreement {
+        color: hsl(246, 25%, 77%);
+        font-size: .7em;
+        font-weight: 500;
+
+        a {
+            text-decoration: none;
+            color: hsl(0, 100%, 74%);
+            font-weight: 700;
+        }
+    }
+}
+
+
+
 .attribution { 
-    font-size: 11px; 
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    left: 50%;
+    transform: translateX(-50%);
+    text-align: center;
+    opacity: 60%;
+    padding-bottom: 10px;
+    font-size: 10px; 
     text-align: center; 
+    font-weight: 600;
 
     a { 
         color: hsl(228, 45%, 44%); 
+        text-decoration: none;
     }
 }
